<resources>
    <string name="app_name">touch_mouse</string>
    <string name="txt1">Welcome!</string>
    <string name="grid">Grid</string>
    <string name="settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="save_btn">Save</string>
    <string name="set1">Padding Top:</string>
    <string name="set2">Padding Bottom:</string>
    <string name="set3">Padding Left:</string>
    <string name="set4">Padding Right:</string>
    <string name="set5">Colums:</string>
    <string name="set6">Rows:</string>
    <string name="hint">3</string>
    <string name="hint1">1</string>
    <string name="hint2">2</string>
    <string name="swt_show_sym">Show Symbols:</string>
    <string name="swt_show_lines">Show Lines:</string>
    <string name="swt_show_fails">Show Trial Fails:</string>
    <string name="swt_show_dots">Show Dots:</string>
    <string name="dotradius">Dot Size:</string>
    <string name="testid">Test ID:</string>

</resources>